fix: text-align in nav-pill

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ hr{
     color:white
 }
 .navigation .navpills{
-/*    text-align: right; */
+   text-align: right;
   margin: 0.6rem 1rem;
 }
 .navigation .navbrand{
